# intprim_framework_ros

./: CMakeLists.txt  LICENSE  README.md  mainpage.dox  package.xml
docs/: index.html
docs/doxygen/: Doxyfile
docs/doxygen/html/: annotated.html  baxter_8h_source.html  classBaxterInterface-members.html  classBaxterInterface.html  classBaxterState-members.html  classBaxterState.html  classDeviceInterface-members.html  classDeviceInterface.html  classDeviceState-members.html  classDeviceState.html  classInteractionApplication-members.html  classInteractionApplication.html  classInteractionCore-members.html  classInteractionCore.html  classLBR4Interface-members.html  classLBR4Interface.html  classLBR4State-members.html  classLBR4State.html  classPredictorInterface-members.html  classPredictorInterface.html  classRigidBody-members.html  classRigidBody.html  classRigidBodyState-members.html  classRigidBodyState.html  classRobotController-members.html  classRobotController.html  classRobotInterface-members.html  classRobotInterface.html  classSinglePredictorInterface-members.html  classSinglePredictorInterface.html  classUR5CInterface-members.html  classUR5CInterface.html  classUR5CState-members.html  classUR5CState.html  classUR5Interface-members.html  classUR5Interface.html  classUR5LInterface-members.html  classUR5LInterface.html  classUR5LState-members.html  classUR5LState.html  (+57 more)
docs/doxygen/html/search/: all_1.js  all_10.js  all_11.js  all_2.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  functions_0.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  groups_0.js  namespaces_0.js  pages_0.js  searchdata.js
docs/tutorials/: 1_introduction.md  2_minimal_example.md  3_robot_example.md  4_creating_new_device.md  5_creating_new_experiment.md  interaction.csv  start_coppelia.sh  tutorial_world.ttt
docs/tutorials/.ipynb_checkpoints/: 1_introduction-checkpoint.ipynb  2_minimal_example-checkpoint.ipynb  3_robot_example-checkpoint.ipynb  4_creating_new_device-checkpoint.ipynb  5_creating_new_experiment-checkpoint.ipynb
docs/tutorials/sub_tutorials/: install_locally.md  interactive_application_cli.md
docs/tutorials/tutorial_examples/coppelia/: README.md  observation_noise.noise  trained_bip.bip
docs/tutorials/tutorial_examples/coppelia/csvs/: coppelia_2020-07-17_21-40-40.csv  coppelia_2020-07-17_21-40-51.csv  coppelia_2020-07-17_21-40-57.csv  coppelia_2020-07-17_21-41-06.csv  coppelia_2020-07-17_21-41-15.csv  coppelia_2020-07-17_21-41-23.csv  coppelia_2020-07-17_21-41-31.csv  coppelia_2020-07-17_21-41-41.csv  coppelia_2020-07-17_21-41-51.csv  coppelia_2020-07-17_21-41-59.csv  coppelia_2020-07-17_21-42-07.csv  coppelia_2020-07-17_21-42-15.csv  coppelia_2020-07-17_21-42-25.csv  coppelia_2020-07-17_21-42-31.csv  coppelia_2020-07-17_21-42-41.csv  coppelia_2020-07-17_21-42-50.csv  coppelia_2020-07-17_21-42-56.csv  coppelia_2020-07-17_21-43-03.csv  coppelia_2020-07-17_21-43-13.csv  coppelia_2020-07-17_21-43-21.csv  coppelia_2020-07-17_21-43-30.csv  coppelia_2020-07-17_21-43-37.csv  coppelia_2020-07-17_21-43-46.csv  coppelia_2020-07-17_21-43-54.csv  coppelia_2020-07-17_21-44-04.csv  coppelia_2020-07-17_21-44-12.csv  coppelia_2020-07-17_21-44-19.csv  coppelia_2020-07-17_21-44-27.csv  coppelia_2020-07-17_21-44-34.csv  coppelia_2020-07-17_21-44-41.csv  coppelia_2020-07-17_21-44-49.csv  coppelia_2020-07-17_21-44-56.csv  coppelia_2020-07-17_21-45-07.csv  coppelia_2020-07-17_21-45-17.csv  coppelia_2020-07-17_21-45-26.csv  coppelia_2020-07-17_21-45-35.csv  coppelia_2020-07-17_21-45-43.csv  coppelia_2020-07-17_21-45-52.csv  coppelia_2020-07-17_21-46-00.csv  (+161 more)
docs/tutorials/tutorial_examples/handwritten/: README.md  observation_noise.noise  trained_bip.bip
include/intprim_framework_ros/: interaction_application.h  interaction_core.h  robot_controller.h
include/intprim_framework_ros/devices/: device_interface.h  lbr4.h  predictor_interface.h  robot_interface.h  single_predictor.h  ur5.h
launch/: interaction_application.launch
msg/: Statistics.msg  Trajectory.msg
param/: experiments.yaml  interaction.yaml  intprim_param.yaml
scripts/: intprim_service.py
scripts/analysis/: index.html  stat_collector.py
scripts/dashboard/: dashboard_main.py  hinton_diagram.py  interaction_primitive_widget.py
src/: interaction_application.cpp  interaction_application_main.cpp  interaction_core.cpp  robot_controller.cpp  robot_controller_main.cpp
src/devices/: lbr4.cpp  single_predictor.cpp  ur5.cpp
srv/: AddDemonstration.srv  CalculateComponents.srv  EvaluateTrajectory.srv  ExportData.srv  GenerateTrajectory.srv  GetApproximateTrajectory.srv  GetBasisError.srv  GetDistribution.srv  GetDistributionParameters.srv  GetMeanTrajectory.srv  GetStatistics.srv  InitializeState.srv  PerformBasisSelection.srv
(+100 files in other folders)
